--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
     <meta property="og:description" content="기출문제들 다운로드하는 사이트" />
   </head>
   <body>
-    <h1>Files and Folders</h1>
+    <h1>기출문제</h1>
     {% if current_path %}
     <a
       id="go-back"
